--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   "dependencies": {
     "express": "^4.15.3",
     "firebase": "^4.3.0",
-    "material-ui": "^1.0.0-beta.11",
-    "material-ui-icons": "^1.0.0-beta.10",
+    "material-ui": "^0.19.1",
     "path": "^0.12.7",
     "react-router-dom": "^4.2.2",
     "typeface-roboto": "0.0.35"
